--- a/for_restaurant_app/pubspec.yaml
+++ b/for_restaurant_app/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
 
+  firebase_core: ^1.1.0
+  cloud_firestore: ^1.0.7
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
