--- a/for_restaurant_shopapp/pubspec.yaml
+++ b/for_restaurant_shopapp/pubspec.yaml
@@ -1,4 +1,4 @@
-name: for_restaurant_app
+name: for_restaurant_shopapp
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -28,11 +28,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^5.0.0
-
-  firebase_core: ^1.1.0
-  cloud_firestore: ^1.0.7
-  flutter_radar_chart: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -50,8 +45,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - images/
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
