--- a/for_restaurant_app/pubspec.yaml
+++ b/for_restaurant_app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^1.1.0
   cloud_firestore: ^1.0.7
   flutter_radar_chart: ^0.2.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
